--- a/.github/workflows/iboxpay.yml
+++ b/.github/workflows/iboxpay.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 笑谱
+name: 笑谱直播
 
 on:
   workflow_dispatch:
@@ -17,6 +17,7 @@ jobs:
         XP_iboxpayHEADER: ${{ secrets.XP_iboxpayHEADER }}
         XP_CASH: ${{ secrets.XP_CASH }}
         XP_refreshTOKEN:  ${{ secrets. XP_refreshTOKEN }}
+        XP_live: ${{ secrets.XP_live }}
     steps:
       - name: Checkout
         run: |
@@ -34,7 +35,7 @@ jobs:
         if: env.XP_iboxpayHEADER
         run: |
           cd ~/JavaScript
-          node Task/iboxpay.js
+          node Task/iboxpayZB.js
         env:
           
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
