--- a/.github/workflows/flw.yml
+++ b/.github/workflows/flw.yml
@@ -19,6 +19,8 @@ jobs:
         FL_flwspBODY: ${{ secrets.FL_flwspBODY }}	
         FL_flwqwBODY: ${{ secrets.FL_flwqwBODY }}        
         FL_CASH: ${{ secrets.FL_CASH }}
+        FL_flwydBODY: ${{ secrets.FL_flwydBODY }}
+        FL_DHCASH: ${{ secrets.FL_DHCASH }}
     steps:
       - name: Checkout
         run: |
