--- a/.github/workflows/iboxpay.yml
+++ b/.github/workflows/iboxpay.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/eml5ZQ/SmF2YVNjcmlwdA.git ~/JavaScript
+          git clone https://github.com/eml5ZQ/SmF2YVNjcmlwdA.git ~/SmF2YVNjcmlwdA
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
@@ -29,12 +29,12 @@ jobs:
       - name: npm install
         if: env.XP_iboxpayHEADER
         run: |
-          cd ~/JavaScript
+          cd ~/SmF2YVNjcmlwdA
           npm install
       - name: '运行 【笑谱】'
         if: env.XP_iboxpayHEADER
         run: |
-          cd ~/JavaScript
+          cd ~/SmF2YVNjcmlwdA
           node Task/iboxpay.js
         env:
           
