--- a/.github/workflows/iboxpay.yml
+++ b/.github/workflows/iboxpay.yml
@@ -29,12 +29,12 @@ jobs:
       - name: npm install
         if: env.XP_iboxpayHEADER
         run: |
-          cd ~/SmF2YVNjcmlwdA
+          cd ~/gitee_q8qsTAUA_cThxc1RBVUE
           npm install
       - name: '运行 【笑谱】'
         if: env.XP_iboxpayHEADER
         run: |
-          cd ~/SmF2YVNjcmlwdA
+          cd ~/gitee_q8qsTAUA_cThxc1RBVUE
           node Task/iboxpay.js
         env:
           
